tests/paczka1/small_fuzzy/60117154.err
Error in line 5: cSakKHvO2 S261 -1,0
Error in line 2: il54Lu A968 38,9
